# uchinaaguchi_katsuyou_jiten

./: README.md  analyse_contents.py  dict_items.jsonl  extracted_text.tsv  font_size.py  from_pdf_to_json.py  generate_dictionary.py  index_words.txt  katsuyou_jiten.json  katsuyou_jiten.jsonl  pdf2jsonl.py  preliminary-decomposition.jsonl  pypdf.py  pyproject.toml  raw_tex.txt  split_content.py  split_contents.jsonl
