[tool.poetry]
name = "uchinaaguchi_katsuyou_jiten"
version = "0.1.0"
description = ""
authors = ["hissanova"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
mypy = "^0.991"
jedi = "^0.18.2"
pylint = "^2.15.8"
ipython = "^8.7.0"
PyPDF2 = "^2.12.0"
pdfminer = "^20191125"
"pdfminer.six" = "^20221105"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120